--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,13 +4,7 @@
   width: 100%;
   padding-top: 5vh;
   font-weight: normal;
-  background-color: #fff;
-}
-
-@media (prefers-color-scheme: dark) {
-  #app {
-    background-color: #0d1117;
-  }
+  background-color: #2c2c2c;
 }
 
 #cover {
@@ -23,17 +17,4 @@
   background: url(https://api.effects.space/bing);
   background-size: cover;
   background-position: center;
-}
-
-@media (prefers-color-scheme: dark) {
-  #cover {
-    background: linear-gradient(
-        to right,
-        rgba(0, 0, 0, 0.3),
-        rgba(0, 0, 0, 0.3)
-      ),
-      url(https://api.effects.space/bing);
-    background-size: cover;
-    background-position: center;
-  }
 }
